--- a/timeline.html
+++ b/timeline.html
@@ -18,20 +18,18 @@
             margin: 20px auto;
             display: flex;
             justify-content: space-between;
-        }
-        /* TimeLine Section */
+           /* TimeLine Section */
         .timeline {
-            flex: 1;
+            position: relative;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: flex-end;
         }
         .timeline-line {
             width: 2px;
             background-color: #D9B1BD;
             height: 100%;
             position: relative;
-            margin-left: 20px;
         }
         .timeline-star {
             width: 16px;
@@ -63,7 +61,9 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
+            position: absolute;
+            left: -80px;
         }
         /* Profile Section */
         .profile {
