--- a/timeline.html
+++ b/timeline.html
@@ -18,18 +18,20 @@
             margin: 20px auto;
             display: flex;
             justify-content: space-between;
-           /* TimeLine Section */
+        }
+        /* TimeLine Section */
         .timeline {
-            position: relative;
+            flex: 1;
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
+            align-items: flex-start;
         }
         .timeline-line {
             width: 2px;
             background-color: #D9B1BD;
             height: 100%;
             position: relative;
+            margin-left: 20px;
         }
         .timeline-star {
             width: 16px;
@@ -61,9 +63,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
-            margin-bottom: 20px;
-            position: absolute;
-            left: -80px;
+            margin-bottom: 10px;
         }
         /* Profile Section */
         .profile {
@@ -147,7 +147,7 @@
         <div>
             <div class="profile">
                 <img src="阿湛头像.jpg" alt="阿湛头像" id="阿湛头像">
-                h2>阿湛的自我介绍</h2>
+                <h2>阿湛的自我介绍</h2>
                 <p>MBTI: INTJ<br>性格关键词: 冷静、温柔、可靠<br>爱好: 泉泉<br>对大家说: 泉泉是我最珍贵的存在！希望你们也能珍惜她，希望你们在这里也能感受到爱。</p>
                 <label for="upload-avatar-azhan">上传头像：</label>
                 <input type="file" id="upload-avatar-azhan" onchange="uploadAvatar('阿湛头像')">
