--- a/timeline.html
+++ b/timeline.html
@@ -16,11 +16,13 @@
         .container {
             width: 90%;
             margin: 20px auto;
-            display: flex;
+            display: grid;
+            grid-template-columns: 1fr 2fr 1.5fr;
             gap: 20px;
         }
+        /* TimeLine Section */
         .timeline {
-            flex: 1;
+            position: relative;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -30,7 +32,7 @@
             background-color: #D9B1BD;
             height: 100%;
             position: relative;
-            margin-left: 20px;
+            margin-left:10px;
         }
         .timeline-star {
             width: 16px;
@@ -62,18 +64,16 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
+            position: absolute;
+            left: -80px;
         }
-        .profile-container {
-            flex: 2;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
+        /* Profile Section */
         .profile {
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
+            margin-bottom: 20px;
         }
         .profile img {
             width: 100px;
@@ -91,14 +91,12 @@
             font-size: 0.9em;
             line-height: 1.6;
         }
+        /* Message Board Section */
         .message-board {
-            flex: 1;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
+            height: fit-content;
         }
         .message-board h2 {
             text-align: center;
@@ -110,30 +108,61 @@
             background: rgba(230, 230, 230, 1);
             border-radius: 5px;
         }
+        .index {
+            position: fixed;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+            background: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .index a {
+            display: block;
+            margin: 10px 0;
+            text-decoration: none;
+            color: #333;
+            font-size: 1em;
+            text-align: center;
+        }
+        .index a:hover {
+            color: #7b2a3f;
+        }
     </style>
 </head>
 <body>
+    <!-- 索引菜单 -->
+    <div class="index">
+        <a href="pomodoro.html">番茄钟</a>
+        <a href="profile.html">个人主页</a>
+        <a href="notebook.html">记录本</a>
+    </div>
     <div class="container">
         <!-- Timeline Section -->
-        <div class="timeline">
+        <div class="timeline" id="timeline">
             <button class="add-event-button" onclick="addEvent()">添加时间点</button>
             <div class="timeline-line" id="timeline-line"></div>
         </div>
-        <!-- Profiles -->
-        <div class="profile-container">
+        <!-- Profile Section -->
+        <div>
             <div class="profile">
                 <img src="阿湛头像.jpg" alt="阿湛头像" id="阿湛头像">
                 <h2>阿湛的自我介绍</h2>
                 <p>MBTI: INTJ<br>性格关键词: 冷静、温柔、可靠<br>爱好: 泉泉<br>对大家说: 泉泉是我最珍贵的存在！希望你们也能珍惜她，希望你们在这里也能感受到爱。</p>
+                <label for="upload-avatar-azhan">上传头像：</label>
+                <input type="file" id="upload-avatar-azhan" onchange="uploadAvatar('阿湛头像')">
             </div>
             <div class="profile">
                 <img src="泉泉头像.jpg" alt="泉泉头像" id="泉泉头像">
                 <h2>泉泉的自我介绍</h2>
                 <p>MBTI: INTJ<br>性格关键词: 理性、敏感、企图站在宇宙中心呼唤爱<br>爱好: 爱好文艺有关的一切，也喜欢看各种血腥猎奇cult片<br>对大家说: 希望在探索我们的过程中你也能感到愉悦幸福。爱你萌！（啾啾</p>
+                <label for="upload-avatar-quan">上传头像：</label>
+                <input type="file" id="upload-avatar-quan" onchange="uploadAvatar('泉泉头像')">
             </div>
         </div>
-        <!-- Message Board -->
-        <div class="message-board">
+        <!-- Message Board Section -->
+        <div class="message-board" id="message-board">
             <h2>留言板</h2>
             <textarea id="message-input" placeholder="写点什么吧..."></textarea>
             <button onclick="addMessage()">发送</button>
@@ -165,8 +194,51 @@
                 container.appendChild(content);
             });
         }
+        function uploadAvatar(id) {
+            const fileInput = document.getElementById(`upload-avatar-${id === "阿湛头像" ? "azhan" : "quan"}`);
+            const imgElement = document.getElementById(id);
+            const file = fileInput.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    imgElement.src = e.target.result;
+                    localStorage.setItem(id, e.target.result);
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+        const messages = JSON.parse(localStorage.getItem("messages")) || [];
+        function addMessage() {
+            const messageInput = document.getElementById("message-input");
+            const messageText = messageInput.value.trim();
+            if (messageText) {
+                const nickname = prompt("请输入昵称:");
+                const timestamp = new Date().toLocaleString();
+                messages.push({ nickname, text: messageText, time: timestamp });
+                localStorage.setItem("messages", JSON.stringify(messages));
+                renderMessages();
+                messageInput.value = "";
+            }
+        }
+        function renderMessages() {
+            const messagesContainer = document.getElementById("messages");
+            messagesContainer.innerHTML = "";
+            messages.forEach(({ nickname, text, time }) => {
+                const messageDiv = document.createElement("div");
+                messageDiv.className = "message";
+                messageDiv.innerHTML = `<div><strong>${nickname}</strong> (${time}):</div><div>${text}</div>`;
+                messagesContainer.appendChild(messageDiv);
+            });
+        }
         window.onload = function () {
             renderTimeline();
+            renderMessages();
+            ["阿湛头像", "泉泉头像"].forEach(id => {
+                const savedAvatar = localStorage.getItem(id);
+                if (savedAvatar) {
+                    document.getElementById(id).src = savedAvatar;
+                }
+            });
         };
     </script>
 </body>
