--- a/pomodoro.html
+++ b/pomodoro.html
@@ -75,7 +75,6 @@
             border: none;
             font-size: 1em;
         }
-
         /* 时间轴样式 */
         .timeline {
             flex: 1;
@@ -101,13 +100,34 @@
             position: fixed;
             bottom: 10px;
             left: 20px;
-            width: 100px;
-            height: 100px;
-            background-image: url('character_idle.gif'); /* 默认站立动画 */
-            background-size: cover;
+            width: 256px;
+            height: 256px;
+            background-image: url('animation_frames.png'); /* 帧序列图片路径 */
+            background-size: 1024px 256px; /* 总宽度 1024px，每帧 256px */
+            animation: idleAnimation 1s steps(4) infinite; /* 默认站立动画 */
         }
 
-        /* 索引样式 */
+        /* 帧动画 */
+        @keyframes idleAnimation {
+            from {
+                background-position: 0 0;
+            }
+            to {
+                background-position: -1024px 0; /* 总宽度1024像素 */
+            }
+        }
+
+        /* 移动动画 */
+        @keyframes moveCharacter {
+            from {
+                left: 20px;
+            }
+            to {
+                left: calc(100% - 256px);
+            }
+        }
+
+        /* 索引菜单 */
         .index {
             position: fixed;
             top: 50%;
@@ -189,7 +209,7 @@
                 } else {
                     clearInterval(interval);
                     alert("时间到！请记录学习内容。");
-                    document.getElementById("character").style.backgroundImage = "url('character_happy.gif')"; // 切换为庆祝动画
+                    triggerCharacterCelebration();
                 }
             }, 1000);
         }
@@ -202,7 +222,7 @@
             clearInterval(interval);
             time = 25 * 60;
             updateTimerDisplay();
-            document.getElementById("character").style.backgroundImage = "url('character_idle.gif')"; // 恢复默认动画
+            resetCharacter();
         }
 
         function setCustomTime() {
@@ -237,6 +257,16 @@
             timeline.innerHTML = records
                 .map(record => `<div class="date-record">${record.time} - ${record.content}</div>`)
                 .join("");
+        }
+
+        function triggerCharacterCelebration() {
+            const character = document.getElementById("character");
+            character.style.animation = "moveCharacter 5s linear forwards, idleAnimation 1s steps(4) infinite";
+        }
+
+        function resetCharacter() {
+            const character = document.getElementById("character");
+            character.style.animation = "idleAnimation 1s steps(4) infinite";
         }
 
         window.onload = renderTimeline;
