--- a/pomodoro.html
+++ b/pomodoro.html
@@ -105,6 +105,7 @@
             background-image: url('animation_frames.png'); /* 帧序列图片路径 */
             background-size: 1024px 256px; /* 总宽度 1024px，每帧 256px */
             animation: idleAnimation 1s steps(4) infinite; /* 默认站立动画 */
+            background-color：red;
         }
 
         /* 帧动画 */
