--- a/pomodoro.html
+++ b/pomodoro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>番茄钟 - 梦是榛果巧克力</title>
+    <title>梦是榛果巧克力</title>
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
@@ -102,7 +102,7 @@
             left: 20px;
             width: 100px;
             height: 150px;
-            background-image: url('animation_frames.png'); /* 帧序列图片路径 */
+            background-image: url('animation_frames1.png'); /* 帧序列图片路径 */
             background-size: 400px 150px; /* 总宽度 1024px，每帧 256px */
             animation: idleAnimation 1s steps(4) infinite; /* 默认站立动画 */
             background-color:transparent;
@@ -185,92 +185,80 @@
             <div id="timelineRecords"></div>
         </div>
     </div>
+<!-- 动画角色 -->
+<div class="character" id="character"></div>
 
-    <!-- 动画角色 -->
-    <div class="character" id="character"></div>
+<script>
+    let interval;
+    let time = 25 * 60;
 
-    <script>
-        let interval;
-        let time = 25 * 60;
+    function updateTimerDisplay() {
+        const minutes = Math.floor(time / 60).toString().padStart(2, '0');
+        const seconds = (time % 60).toString().padStart(2, '0');
+        document.getElementById("timer").innerText = `${minutes}:${seconds}`;
+        const percentage = ((25 * 60 - time) / (25 * 60)) * 100;
+        document.getElementById("progress").style.background = `conic-gradient(#D9B1BD 0% ${percentage}%, #e0e0e0 ${percentage}% 100%)`;
+    }
 
-        function updateTimerDisplay() {
-            const minutes = Math.floor(time / 60).toString().padStart(2, '0');
-            const seconds = (time % 60).toString().padStart(2, '0');
-            document.getElementById("timer").innerText = `${minutes}:${seconds}`;
-            const percentage = ((25 * 60 - time) / (25 * 60)) * 100;
-            document.getElementById("progress").style.background = `conic-gradient(#D9B1BD 0% ${percentage}%, #e0e0e0 ${percentage}% 100%)`;
-        }
-
-        function startTimer() {
-            clearInterval(interval);
-            interval = setInterval(() => {
-                if (time > 0) {
-                    time--;
-                    updateTimerDisplay();
-                } else {
-                    clearInterval(interval);
-                    alert("时间到！请记录学习内容。");
-                    triggerCharacterCelebration();
-                }
-            }, 1000);
-        }
-
-        function pauseTimer() {
-            clearInterval(interval);
-        }
-
-        function resetTimer() {
-            clearInterval(interval);
-            time = 25 * 60;
-            updateTimerDisplay();
-            resetCharacter();
-        }
-
-        function setCustomTime() {
-            const customTime = parseInt(document.getElementById("customTime").value);
-            if (customTime && customTime > 0) {
-                time = customTime * 60;
+    function startTimer() {
+        clearInterval(interval);
+        interval = setInterval(() => {
+            if (time > 0) {
+                time--;
                 updateTimerDisplay();
             } else {
-                alert("请输入有效的分钟数！");
+                clearInterval(interval);
+                alert("时间到！请记录学习内容。");
+                moveCharacterRandomly(); // 开始角色随机移动
             }
-        }
+        }, 1000);
+    }
 
-        function saveLog() {
-            const logInput = document.getElementById("logInput").value.trim();
-            if (logInput) {
-                const now = new Date();
-                const record = { time: now.toLocaleString(), content: logInput };
-                const records = JSON.parse(localStorage.getItem("timelineRecords") || "[]");
-                records.push(record);
-                localStorage.setItem("timelineRecords", JSON.stringify(records));
-                renderTimeline();
-                document.getElementById("logInput").value = "";
-                alert("记录已保存！");
-            } else {
-                alert("请填写学习内容！");
-            }
-        }
+    function pauseTimer() {
+        clearInterval(interval);
+    }
 
-        function renderTimeline() {
-            const records = JSON.parse(localStorage.getItem("timelineRecords") || "[]");
-            const timeline = document.getElementById("timelineRecords");
-            timeline.innerHTML = records
-                .map(record => `<div class="date-record">${record.time} - ${record.content}</div>`)
-                .join("");
-        }
+    function resetTimer() {
+        clearInterval(interval);
+        time = 25 * 60;
+        updateTimerDisplay();
+        resetCharacter(); // 恢复角色默认状态
+    }
 
-        function triggerCharacterCelebration() {
-            const character = document.getElementById("character");
-            character.style.animation = "moveCharacter 5s linear forwards, idleAnimation 1s steps(4) infinite";
+    function setCustomTime() {
+        const customTime = parseInt(document.getElementById("customTime").value);
+        if (customTime && customTime > 0) {
+            time = customTime * 60;
+            updateTimerDisplay();
+        } else {
+            alert("请输入有效的分钟数！");
         }
+    }
 
-        function resetCharacter() {
-            const character = document.getElementById("character");
-            character.style.animation = "idleAnimation 1s steps(4) infinite";
-        }
+    // 动画角色随机移动
+    function moveCharacterRandomly() {
+        const character = document.getElementById("character");
+        const screenWidth = window.innerWidth;
+        const screenHeight = window.innerHeight;
 
-        window.onload = renderTimeline;
-    </script>
+        setInterval(() => {
+            const randomX = Math.random() * (screenWidth - 100); // 减去角色宽度
+            const randomY = Math.random() * (screenHeight - 150); // 减去角色高度
+
+            character.style.left = `${randomX}px`;
+            character.style.top = `${randomY}px`;
+        }, 2000); // 每2秒随机移动一次
+    }
+
+    function resetCharacter() {
+        const character = document.getElementById("character");
+        character.style.animation = "idleAnimation 1s steps(4) infinite";
+        character.style.left = "20px";
+        character.style.top = "10px";
+    }
+
+    window.onload = renderTimeline;
+</script>
+  
 </body>
 </html>
