--- a/pomodoro.html
+++ b/pomodoro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>梦是榛果巧克力</title>
+    <title>番茄钟 - 梦是榛果巧克力</title>
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
@@ -94,72 +94,9 @@
             border-radius: 5px;
             margin-bottom: 10px;
         }
-
-        /* 动画角色 */
-        .character {
-            position: fixed;
-            bottom: 10px;
-            left: 20px;
-            width: 100px;
-            height: 150px;
-            background-image: url('animation_frames1.png'); /* 帧序列图片路径 */
-            background-size: 400px 150px; /* 总宽度 1024px，每帧 256px */
-            animation: idleAnimation 1s steps(4) infinite; /* 默认站立动画 */
-            background-color:transparent;
-        }
-
-        /* 帧动画 */
-        @keyframes idleAnimation {
-            from {
-                background-position: 0 0;
-            }
-            to {
-                background-position: -400px 0; /* 总宽度1024像素 */
-            }
-        }
-
-        /* 移动动画 */
-        @keyframes moveCharacter {
-            from {
-                left: 20px;
-            }
-            to {
-                left: calc(100% - 256px);
-            }
-        }
-
-        /* 索引菜单 */
-        .index {
-            position: fixed;
-            top: 50%;
-            right: 10px;
-            transform: translateY(-50%);
-            background: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .index a {
-            display: block;
-            margin: 10px 0;
-            text-decoration: none;
-            color: #333;
-            font-size: 1em;
-            text-align: center;
-        }
-        .index a:hover {
-            color: #7b2a3f;
-        }
     </style>
 </head>
 <body>
-    <!-- 索引菜单 -->
-    <div class="index">
-        <a href="timeline.html">时间轴</a>
-        <a href="profile.html">个人主页</a>
-        <a href="notebook.html">记录本</a>
-    </div>
-
     <div class="container">
         <!-- 番茄钟 -->
         <div class="pomodoro">
@@ -181,84 +118,81 @@
         </div>
         <!-- 时间轴 -->
         <div class="timeline">
-            <h3>学习记录时间轴</h3>
+              <h3>学习记录时间轴</h3>
             <div id="timelineRecords"></div>
         </div>
     </div>
-<!-- 动画角色 -->
-<div class="character" id="character"></div>
 
-<script>
-    let interval;
-    let time = 25 * 60;
+    <script>
+        let interval;
+        let time = 25 * 60;
 
-    function updateTimerDisplay() {
-        const minutes = Math.floor(time / 60).toString().padStart(2, '0');
-        const seconds = (time % 60).toString().padStart(2, '0');
-        document.getElementById("timer").innerText = `${minutes}:${seconds}`;
-        const percentage = ((25 * 60 - time) / (25 * 60)) * 100;
-        document.getElementById("progress").style.background = `conic-gradient(#D9B1BD 0% ${percentage}%, #e0e0e0 ${percentage}% 100%)`;
-    }
+        function updateTimerDisplay() {
+            const minutes = Math.floor(time / 60).toString().padStart(2, '0');
+            const seconds = (time % 60).toString().padStart(2, '0');
+            document.getElementById("timer").innerText = `${minutes}:${seconds}`;
+            const percentage = ((25 * 60 - time) / (25 * 60)) * 100;
+            document.getElementById("progress").style.background = `conic-gradient(#D9B1BD 0% ${percentage}%, #e0e0e0 ${percentage}% 100%)`;
+        }
 
-    function startTimer() {
-        clearInterval(interval);
-        interval = setInterval(() => {
-            if (time > 0) {
-                time--;
+        function startTimer() {
+            clearInterval(interval);
+            interval = setInterval(() => {
+                if (time > 0) {
+                    time--;
+                    updateTimerDisplay();
+                } else {
+                    clearInterval(interval);
+                    alert("时间到！请记录学习内容。");
+                }
+            }, 1000);
+        }
+
+        function pauseTimer() {
+            clearInterval(interval);
+        }
+
+        function resetTimer() {
+            clearInterval(interval);
+            time = 25 * 60;
+            updateTimerDisplay();
+        }
+
+        function setCustomTime() {
+            const customTime = parseInt(document.getElementById("customTime").value);
+            if (customTime && customTime > 0) {
+                time = customTime * 60;
                 updateTimerDisplay();
             } else {
-                clearInterval(interval);
-                alert("时间到！请记录学习内容。");
-                moveCharacterRandomly(); // 开始角色随机移动
+                alert("请输入有效的分钟数！");
             }
-        }, 1000);
-    }
-
-    function pauseTimer() {
-        clearInterval(interval);
-    }
-
-    function resetTimer() {
-        clearInterval(interval);
-        time = 25 * 60;
-        updateTimerDisplay();
-        resetCharacter(); // 恢复角色默认状态
-    }
-
-    function setCustomTime() {
-        const customTime = parseInt(document.getElementById("customTime").value);
-        if (customTime && customTime > 0) {
-            time = customTime * 60;
-            updateTimerDisplay();
-        } else {
-            alert("请输入有效的分钟数！");
         }
-    }
 
-    // 动画角色随机移动
-    function moveCharacterRandomly() {
-        const character = document.getElementById("character");
-        const screenWidth = window.innerWidth;
-        const screenHeight = window.innerHeight;
+        function saveLog() {
+            const logInput = document.getElementById("logInput").value.trim();
+            if (logInput) {
+                const now = new Date();
+                const record = { time: now.toLocaleString(), content: logInput };
+                const records = JSON.parse(localStorage.getItem("timelineRecords") || "[]");
+                records.push(record);
+                localStorage.setItem("timelineRecords", JSON.stringify(records));
+                renderTimeline();
+                document.getElementById("logInput").value = "";
+                alert("记录已保存！");
+            } else {
+                alert("请填写学习内容！");
+            }
+        }
 
-        setInterval(() => {
-            const randomX = Math.random() * (screenWidth - 100); // 减去角色宽度
-            const randomY = Math.random() * (screenHeight - 150); // 减去角色高度
+        function renderTimeline() {
+            const records = JSON.parse(localStorage.getItem("timelineRecords") || "[]");
+            const timeline = document.getElementById("timelineRecords");
+            timeline.innerHTML = records
+                .map(record => `<div class="date-record">${record.time} - ${record.content}</div>`)
+                .join("");
+        }
 
-            character.style.left = `${randomX}px`;
-            character.style.top = `${randomY}px`;
-        }, 2000); // 每2秒随机移动一次
-    }
-
-    function resetCharacter() {
-        const character = document.getElementById("character");
-        character.style.animation = "idleAnimation 1s steps(4) infinite";
-        character.style.left = "20px";
-        character.style.top = "10px";
-    }
-
-    window.onload = renderTimeline;
-</script>
-  
+        window.onload = renderTimeline;
+    </script>
 </body>
 </html>
