--- a/pomodoro.html
+++ b/pomodoro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>梦是榛果巧克力</title>
+    <title>番茄钟 - 梦是榛果巧克力</title>
     <style>
         body {
             font-family: "Microsoft Yahei", sans-serif;
@@ -76,7 +76,7 @@
             border: none;
             font-size: 1em;
         }
-          /* 积分系统和成就墙样式 */
+        /* 积分系统和成就墙样式 */
         .section {
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
@@ -125,7 +125,7 @@
     <div class="container">
         <!-- 番茄钟 -->
         <div class="pomodoro">
-            <h2>番茄钟</h2>
+           <h2>番茄钟</h2>
             <div class="progress-circle" id="progress">
                 <span id="timer">25:00</span>
             </div>
@@ -243,4 +243,4 @@
         window.onload = updateStats;
     </script>
 </body>
-</html>
+</html> 
